Added Travis-CI setup - Added 'build' to flake8 exclude - Fixed a lint error

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [flake8]
 format = pylint
-exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,databuilder/sql_parser/usage/presto/antlr_generated
+exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,build,databuilder/sql_parser/usage/presto/antlr_generated
 max-complexity = 10
 max-line-length = 120
 ignore = NONE
