--- a/.travis.yml
+++ b/.travis.yml
@@ -3,8 +3,11 @@ python: 2.7
 install:
 - pip install -r requirements.txt
 - python setup.py install
+- pip install codecov
 script:
 - make test
+after_success:
+- codecov
 deploy:
   provider: pypi
   user: amundsen-dev
