Add Kafka source extractor

--- a/requirements.txt
+++ b/requirements.txt
@@ -63,3 +63,4 @@ google-api-python-client>=1.6.0, <2.0.0dev
 google-auth-httplib2>=0.0.1
 google-auth>=1.0.0, <2.0.0dev
 httplib2~=0.9.2
+confluent-kafka==1.0.0
