--- a/requirements.txt
+++ b/requirements.txt
@@ -54,6 +54,7 @@ pytz==2018.4
 antlr4-python2-runtime==4.7.1
 statsd==3.2.1
 retrying==1.3.3
+PyAthena[SQLAlchemy]
 
 # Python API client for google
 # License: Apache Software License
