--- a/requirements.txt
+++ b/requirements.txt
@@ -46,6 +46,7 @@ py==1.5.3
 pyhocon==0.3.42
 pyparsing==2.2.0
 six==1.11.0
+snowflake-sqlalchemy=1.1.14
 sqlalchemy==1.3.0
 wheel==0.31.1
 neo4j-driver==1.7.2
@@ -55,6 +56,7 @@ antlr4-python2-runtime==4.7.1
 statsd==3.2.1
 retrying==1.3.3
 PyAthena[SQLAlchemy]
+urllib3==1.22
 
 # Python API client for google
 # License: Apache Software License
