--- a/requirements.txt
+++ b/requirements.txt
@@ -46,7 +46,7 @@ py==1.5.3
 pyhocon==0.3.42
 pyparsing==2.2.0
 six==1.11.0
-snowflake-sqlalchemy=1.1.14
+snowflake-sqlalchemy==1.1.14
 sqlalchemy==1.3.0
 wheel==0.31.1
 neo4j-driver==1.7.2
