--- a/requirements.txt
+++ b/requirements.txt
@@ -67,3 +67,8 @@ google-auth>=1.0.0, <2.0.0dev
 httplib2~=0.9.2
 confluent-kafka==1.0.0
 unidecode
+
+
+# Snowflake Extractor Requirements
+# snowflake-sqlalchemy==1.1.14
+# snowflake-connector-python==1.9.0
