--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ ignore = NONE
 max-line-length = 120
 
 [tool:pytest]
-addopts = --cov=databuilder --cov-fail-under=70 --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html -vvv
+addopts = -rs --cov=databuilder --cov-fail-under=70 --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html -vvv
 
 [coverage:run]
 branch = True
