--- a/requirements.txt
+++ b/requirements.txt
@@ -6,27 +6,27 @@ flake8==3.5.0
 # A flake8 plugin that helps you write tidier imports.
 # License: ISCL
 # Upstream url: https://pypi.python.org/pypi/flake8-tidy-imports
-flake8-tidy-imports==1.1.0
+flake8-tidy-imports>=1.1.0,<2.0
 
 # A mature full-featured Python testing tool.
 # License: MIT
 # Upstream url: http://pytest.org/
-pytest==3.6.0
+pytest>=3.6.0,<4.0
 
 # Pytest plugin for measuring coverage.
 # License: MIT
 # Upstream url: https://github.com/pytest-dev/pytest-cov
-pytest-cov==2.5.1
+pytest-cov>=2.5.1,<3.0
 
 # Rolling backport of unittest.mock for all Pythons
 # License: BSD
 # Upstream url: https://mock.readthedocs.io/en/latest/
-mock==2.0.0
+mock>=2.0.0,<3.0
 
 # Thin-wrapper around the mock package for easier use with py.test.
 # License: MIT
 # Upstream url: https://pypi.python.org/pypi/pytest-mock
-pytest-mock==1.1
+pytest-mock>=1.1,<2.0
 
 # PEP 484
 # License: PSF
@@ -36,17 +36,17 @@ typing==3.6.4
 # Python client for ElasticSearch
 # License: Apache Software License
 # Upstream url: https://pypi.org/project/elasticsearch/
-elasticsearch==6.2.0
+elasticsearch>=6.2.0,<7.0
 
 atomicwrites==1.1.5
 attrs==18.1.0
 more-itertools==4.2.0
-pluggy==0.6.0
+pluggy>=0.6.0
 py==1.5.3
 pyhocon==0.3.42
 pyparsing==2.2.0
 six==1.11.0
-sqlalchemy==1.3.0
+sqlalchemy>=1.3.0,<2.0
 wheel==0.31.1
 neo4j-driver==1.7.2
 neotime==1.7.1
