--- a/requirements.txt
+++ b/requirements.txt
@@ -45,7 +45,7 @@ pluggy>=0.6.0
 py==1.5.3
 pyhocon==0.3.42
 pyparsing==2.2.0
-six==1.11.0
+six>=1.12.0,<2.0.0
 sqlalchemy>=1.3.0,<2.0
 wheel==0.31.1
 neo4j-driver==1.7.2
