--- a/requirements.txt
+++ b/requirements.txt
@@ -16,7 +16,7 @@ pytest>=3.6.0,<4.0
 # Pytest plugin for measuring coverage.
 # License: MIT
 # Upstream url: https://github.com/pytest-dev/pytest-cov
-pytest-cov>=2.5.1,<3.0
+pytest-cov>=2.5.1,<=2.9
 
 # Rolling backport of unittest.mock for all Pythons
 # License: BSD
