--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 # The modular source code checker: pep8, pyflakes and co
 # License: MIT
 # Upstream url: http://bitbucket.org/tarek/flake8
-flake8==3.5.0
+flake8>=3.5.0
 
 # A flake8 plugin that helps you write tidier imports.
 # License: ISCL
@@ -31,31 +31,20 @@ pytest-mock>=1.1,<2.0
 # PEP 484
 # License: PSF
 # Upstream url: https://github.com/python/typing
-typing==3.6.4
+typing>=3.6.4
 
 # Python client for ElasticSearch
 # License: Apache Software License
 # Upstream url: https://pypi.org/project/elasticsearch/
 elasticsearch>=6.2.0,<7.0
 
-atomicwrites==1.1.5
-attrs==18.1.0
-more-itertools==4.2.0
-pluggy>=0.6.0
-py==1.5.3
-pyhocon==0.3.42
-pyparsing==2.2.0
-six>=1.11.0,<2.0.0
+pyhocon>=0.3.42
 sqlalchemy>=1.3.0,<2.0
-wheel==0.31.1
-neo4j-driver==1.7.2
-neotime==1.7.1
-pytz==2018.4
-statsd==3.2.1
-retrying==1.3.3
-unicodecsv==0.14.1,<1.0
-
+neo4j-driver>=1.7.2
+pytz>=2018.4
+statsd>=3.2.1
+retrying>=1.3.3
 httplib2>=0.18.0
 unidecode
 
-requests==2.23.0,<3.0
+requests>=2.23.0,<3.0
