--- a/requirements.txt
+++ b/requirements.txt
@@ -38,9 +38,10 @@ typing>=3.6.4
 # Upstream url: https://pypi.org/project/elasticsearch/
 elasticsearch>=6.2.0,<7.0
 
+neo4j-driver>=1.7.2,<4.0
+
 pyhocon>=0.3.42
 sqlalchemy>=1.3.0,<2.0
-neo4j-driver>=1.7.2
 pytz>=2018.4
 statsd>=3.2.1
 retrying>=1.3.3
