--- a/requirements.txt
+++ b/requirements.txt
@@ -40,7 +40,7 @@ elasticsearch>=6.2.0,<7.0
 
 neo4j-driver>=1.7.2,<4.0
 
-pyhocon>=0.3.42
+pyhocon==0.3.42
 sqlalchemy>=1.3.0,<2.0
 pytz>=2018.4
 statsd>=3.2.1
