--- a/requirements.txt
+++ b/requirements.txt
@@ -49,7 +49,7 @@ wheel==0.31.1
 neo4j-driver==1.7.2
 neotime==1.7.1
 mypy==0.782
-pytz==2018.4
+pytz>=2018.4
 statsd==3.2.1
 retrying==1.3.3
 unicodecsv==0.14.1,<1.0
