--- a/requirements.txt
+++ b/requirements.txt
@@ -47,8 +47,8 @@ pyparsing==2.2.0
 six>=1.11.0,<2.0.0
 sqlalchemy>=1.3.0,<2.0
 wheel==0.31.1
-
-
+neo4j-driver==1.7.2
+neotime==1.7.1
 mypy==0.782
 pytz==2018.4
 statsd==3.2.1
@@ -59,4 +59,3 @@ httplib2>=0.18.0
 unidecode
 
 requests==2.23.0,<3.0
-neo4j==4.1.1
