use parameters to allow special characters in neo4j cypher statement
Signed-off-by: Roger Tang <roger.tang@workday.com>

--- a/requirements.txt
+++ b/requirements.txt
@@ -57,6 +57,8 @@ unicodecsv==0.14.1,<1.0
 
 httplib2>=0.18.0
 unidecode
+Jinja2>=2.10.0,<2.12
+pandas>=0.21.0,<1.2.0
 
 requests==2.23.0,<3.0
 responses==0.10.6
