--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,10 @@ typing==3.6.4
 # Upstream url: https://pypi.org/project/elasticsearch/
 elasticsearch>=6.2.0,<7.0
 
+# A common package that holds the models deifnition and schemas that are used
+# accross different amundsen repositories.
+amundsen-common>=0.5.6,<1.0
+
 atomicwrites==1.1.5
 more-itertools==4.2.0
 pluggy>=0.6.0
