--- a/.github/workflows/pull_request.yml
+++ b/.github/workflows/pull_request.yml
@@ -25,6 +25,6 @@ jobs:
         with:
           python-version: ${{ matrix.python-version }}
       - name: Install dependencies
-        run: pip3 install -r requirements.txt && pip3 install .[all] && pip3 install codecov
+        run: pip3 install .[all] && pip3 install codecov
       - name: Run python unit tests
         run: make test
