--- a/requirements.txt
+++ b/requirements.txt
@@ -38,6 +38,11 @@ typing==3.6.4
 # Upstream url: https://pypi.org/project/elasticsearch/
 elasticsearch>=6.2.0,<7.0
 
+# Code formatter
+# License: MIT
+# Upstream url: https://pypi.org/project/black/
+black==20.8b1
+
 atomicwrites==1.1.5
 more-itertools==4.2.0
 pluggy>=0.6.0
