Ignore " whitespace before ':'"
Signed-off-by: Joseph Atkins-Turkish <jatkins-turkish@brex.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,7 +3,8 @@ format = pylint
 exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,build,databuilder/sql_parser/usage/presto/antlr_generated
 max-complexity = 10
 max-line-length = 120
-ignore = NONE
+# Ignore 
+ignore = E203
 
 [pep8]
 max-line-length = 120
