Make setup.cfg compatible with black
Signed-off-by: Joseph Atkins-Turkish <jatkins-turkish@brex.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -3,8 +3,8 @@ format = pylint
 exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,build,databuilder/sql_parser/usage/presto/antlr_generated
 max-complexity = 10
 max-line-length = 120
-# Ignore 
-ignore = E203
+# Ignore errors which are incompatible with Black
+ignore = E203, E501, W503
 
 [pep8]
 max-line-length = 120
