--- a/setup.cfg
+++ b/setup.cfg
@@ -25,3 +25,13 @@ directory = build/coverage_html
 python_version = 3.6
 disallow_untyped_defs = True
 ignore_missing_imports = True
+
+[isort]
+profile = django
+line_length = 120
+force_grid_wrap = 3
+combine_star = true
+combine_as_imports = true
+remove_redundant_aliases = true
+color_output = true
+skip_glob = []
