split long line in setup.cfg file
Signed-off-by: Đặng Minh Dũng <dungdm93@live.com>

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,15 @@
 [flake8]
 format = pylint
-exclude = .svc,CVS,.bzr,.hg,.git,__pycache__,venv,build,databuilder/sql_parser/usage/presto/antlr_generated
+exclude =
+  CVS,
+  .svc,
+  .bzr,
+  .hg,
+  .git,
+  __pycache__,
+  venv,
+  build,
+  databuilder/sql_parser/usage/presto/antlr_generated
 max-complexity = 10
 max-line-length = 120
 ignore = NONE
@@ -9,7 +18,14 @@ ignore = NONE
 max-line-length = 120
 
 [tool:pytest]
-addopts = -rs --cov=databuilder --cov-fail-under=70 --cov-report=term-missing:skip-covered --cov-report=xml --cov-report=html -vvv
+addopts =
+  -rs
+  --cov=databuilder
+  --cov-fail-under=70
+  --cov-report=term-missing:skip-covered
+  --cov-report=xml
+  --cov-report=html
+  -vvv
 
 [coverage:run]
 branch = True
