--- a/requirements.txt
+++ b/requirements.txt
@@ -65,6 +65,9 @@ responses==0.10.6
 
 pyatlasclient==1.1.2
 
-# Snowflake dependencies; uncomment if using Snowflake
-#snowflake-sqlalchemy==1.1.14
-#snowflake-connector-python==1.9.1
+# Snowflake dependencies 
+# snowflake-connector-python needs to 2.0.3 or higher due to https://github.com/snowflakedb/snowflake-sqlalchemy/issues/127
+# Due to conflict with requests above in this requirements.txt, has to be 2.2.2 or higher
+# Uncomment below if using Snowflake
+#snowflake-connector-python==2.2.2
+#snowflake-sqlalchemy==1.2.4
