--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ flake8==3.5.0
 # License: ISCL
 # Upstream url: https://pypi.python.org/pypi/flake8-tidy-imports
 flake8-tidy-imports>=1.1.0,<2.0
+freezegun==1.1.0
 
 # A Python utility / library to sort imports.
 # License: MIT
